various min changes

--- a/neopets/lasak.html
+++ b/neopets/lasak.html
@@ -65,6 +65,21 @@
     font-weight: bold;
   }
 
+  .mainy {
+    position: relative;
+    top: -50%;
+    margin: 20px auto;
+    width: 70%;
+    max-width: 700px;
+    background: #242424;
+    color: rgb(255, 255, 255);
+    word-wrap: break-word;
+    padding: 10px;
+    text-align: left;
+    box-shadow: 10px 10px black;
+    font-weight: bold;
+  }
+
   /* begin link colors and decorations */
 
   a:link,
@@ -89,6 +104,16 @@
     max-height: 100%;
   }
 
+  .favicon {
+    width: 17px;
+    height: 17px;
+  }
+
+  .bigtext {
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    text-align: center;
+  }
 </style>
 
 <script src="jquery-1.7.js" type="text/javascript"></script>
@@ -159,17 +184,40 @@
   <div class="main">
     <img src="/images/characters/lasak/box-lasak.gif">
     <br>
-  <br>
-  LASAK, <i>THE RESTLESS WOLF</i>
-  <br> HALLOWEEN LUPE
-<br>
-VIEW ON: <a href="https://www.neopets.com/petlookup.phtml?pet=Lasaklang">NEOPETS</a> | <a href="https://impress.openneo.net/outfits/2502700">OPENNEO</a>
+    <br>
+    LASAK, <i>THE RESTLESS WOLF</i>
+    <br> HALLOWEEN LUPE
+    <br>
+    VIEW ON: <a href="https://www.neopets.com/petlookup.phtml?pet=Lasaklang">NEOPETS</a> | <a
+      href="https://impress.openneo.net/outfits/2502700">OPENNEO</a>
   </div>
 
   <div class="main">
-    <img src="/images/gifs/lupe.gif" alt="Lupe!" title="Lupe!"><img src="/images/gifs/werelupe.gif" alt="Werelupe Enjoyer!" title="Werelupe Enjoyer!"><img src="/images/gifs/relax.gif" alt="Relaxed!" title="Relaxed!"><img src="/images/gifs/groovy.gif" alt="Groovy!" title="Groovy!"><img src="/images/gifs/runaway_garlic.gif" alt="Ah! Garlic!" title="Ah! Garlic!"><img src="/images/gifs/whee.gif" alt="Whee!" title="Whee!"><img src="/images/gifs/mibeach.gif" alt="Beach Time!" title="Beach Time!"><img src="/images/gifs/hi.gif" alt="hi" title="hi"><img src="/images/gifs/arcade.gif" alt="Arcade Enjoyer!" title="Arcade Enjoyer!">
+    <img src="/images/gifs/lupe.gif" alt="Lupe!" title="Lupe!"><img src="/images/gifs/werelupe.gif"
+      alt="Werelupe Enjoyer!" title="Werelupe Enjoyer!"><img src="/images/gifs/relax.gif" alt="Relaxed!"
+      title="Relaxed!"><img src="/images/gifs/groovy.gif" alt="Groovy!" title="Groovy!"><img
+      src="/images/gifs/runaway_garlic.gif" alt="Ah! Garlic!" title="Ah! Garlic!"><img src="/images/gifs/whee.gif"
+      alt="Whee!" title="Whee!"><img src="/images/gifs/mibeach.gif" alt="Beach Time!" title="Beach Time!"><img
+      src="/images/gifs/hi.gif" alt="hi" title="hi"><img src="/images/gifs/arcade.gif" alt="Arcade Enjoyer!"
+      title="Arcade Enjoyer!">
+  </div>
 
-</div>
+  <div class="main">
+    <audio controls="" id="audio" autoplay="false" tabindex="0"></audio>
+    <hr>
+    <ul id="playlist">
+      <a href="/audio/lasak/places.mp3">★ fred again.. - places to be
+      </a>
+    </ul>
+  </div>
+  <div class="mainy">
+    Voted #1 party animal of the party. A chill MF to hang around and watch youtube video essays with before you two get
+    dressed, or undressed, to go to your local underground rave or gay bar with your other "Lasak" friends. Lasak
+    meaning restless in Indonesian!
+    <br> <br>
+    Beloved by the whole party when they are taking a long rest at home. Like <a href="/roku">Rokukuyu</a> and  <a
+      href="https://www.neopets.com/petlookup.phtml?pet=Tajizeha">Taji <img src="/images/other/faviconV2.png" class="favicon"></a>, you'll find her primarily at home, and not as involved in the whole overarching story. But it doesn't mean she isn't active! No... you'll find it quite the opposite, 
+  </div>
 
 </body>
 
