--- a/neopets/nekotenko.html
+++ b/neopets/nekotenko.html
@@ -22,7 +22,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    background-color: rgb(103,94,92);
+    background-color: rgb(103, 94, 92);
     height: 100%;
   }
 
@@ -72,7 +72,7 @@
     top: -50%;
     margin: 20px auto;
     width: 90%;
-    background: rgb(188,177,183);
+    background: rgb(188, 177, 183);
     padding: 10px;
   }
 
@@ -81,7 +81,7 @@
 
   a:link,
   a:visited {
-    color: rgb(111,181,128);
+    color: rgb(111, 181, 128);
   }
 
 
@@ -179,44 +179,44 @@
 
 <body>
   <div class="cushion">
-  <div class="container">
-  </div>
+    <div class="container">
+    </div>
 
 
-  <div class="top">
-    <a href="/characters">CHARACTER SELECT</a> >> NEKOTENKO
-  </div>
+    <div class="top">
+      <a href="/characters">CHARACTER SELECT</a> >> NEKOTENKO
+    </div>
 
 
 
-  <div class="main"><a href="images/characters/nekotenko/ref_nekotenko.png"><img
-        src="images/characters/nekotenko/ref_nekotenko.png"></a>
+    <div class="main"><a href="images/characters/nekotenko/ref_nekotenko.png"><img
+          src="images/characters/nekotenko/ref_nekotenko.png"></a>
 
-    NEKO TENKO/CAT TENKO (FORMERLY TENKO 2017-2021)
-    <br>
-    ANGORA CAT
-    <br>
-    HE/HIM
-  </div>
+      NEKO TENKO/CAT TENKO (FORMERLY TENKO 2017-2021)
+      <br>
+      ANGORA CAT
+      <br>
+      HE/HIM
+    </div>
 
-  <div class="main">
-    <img src="/images/gifs/nyah.gif" title="Nyah!"><img src="/images/gifs/mew.gif" title="Mew!"><img
-      src="/images/gifs/smelly.gif" title="Smelly!">
-  </div>
+    <div class="main">
+      <img src="/images/gifs/nyah.gif" title="Nyah!"><img src="/images/gifs/mew.gif" title="Mew!"><img
+        src="/images/gifs/smelly.gif" title="Smelly!">
+    </div>
 
-  <div class="main">
+    <div class="main">
 
-    <audio controls="" id="audio" autoplay="false" tabindex="0"></audio>
-    <hr>
-    <ul id="playlist">
-      <a href="audio/nekotenko/helixspiral.mp3">★ Cornelius - Brazil
-        <br>
-        <a href="/audio/nekotenko/sideprojects.mp3">★ Bomb The Music Industry - Side Projects are Never Successful</a>
-  </div>
-  <div class="main">
-    ★ Original form of Tenko, created in 2017. Lesser used now!
-    <br>
-    ★ Loves <a href="https://toyhou.se/1643586.saya" target="_blank">Saya</a> the most <3 </div>
+      <audio controls="" id="audio" autoplay="false" tabindex="0"></audio>
+      <hr>
+      <ul id="playlist">
+        <a href="audio/nekotenko/helixspiral.mp3">★ Cornelius - Brazil
+          <br>
+          <a href="/audio/nekotenko/sideprojects.mp3">★ Bomb The Music Industry - Side Projects are Never Successful</a>
+    </div>
+    <div class="main">
+      ★ Original form of Tenko, created in 2017. Lesser used now!
+      <br>
+    </div>
 </body>
 
 </html>
