--- a/neopets/sphoryx.html
+++ b/neopets/sphoryx.html
@@ -198,9 +198,11 @@
       at a secluded shrine that locals had revered and told me about. It was never clear to me whether she was watching
       over this particular shrine, or if we were both on the move and our meeting was complete happenstance.
       <br><br>
-      Not counting the beast that is <a href="https://www.neopets.com/petlookup.phtml?pet=Cococchi">Cococchi <img
-          src="/images/other/faviconV2.png" class="favicon"></a> who is in a league of her own and not even affiliated with us, Sphoryx is the most odd one out of everyone in my party, but we accept her all the same. She does not live with us, but she knows how to get to us. 
-        </i> 
+      Not counting that beast <a href="https://www.neopets.com/petlookup.phtml?pet=Cococchi">Cococchi <img
+          src="/images/other/faviconV2.png" class="favicon"></a> who is in a league of her own and not even affiliated
+      with us, Sphoryx is the most odd one out of everyone in my party, but we accept her all the same. She does not
+      live with us, but she knows how to get to us. She's replaced Machu in Y26, as she possesses the restorative powers we need to keep going. 
+    </i>
   </div>
   <div class="main">
     SPHORYX IS BUSY EARNING AVATARS! CHECK BACK LATER
