--- a/neopets/tenko.html
+++ b/neopets/tenko.html
@@ -347,10 +347,10 @@
         <a href="/audio/tenko/middleoftheroad.mp3">★ Leo Kottle - Middle Of The Road
         </a>
         <br>
-        <a href="/audio/tenko/funnyfarm.mp3">★ Lightning Bolt - Funny Farm</a>
+        <a href="/audio/tenko/funnyfarm.mp3">★ Lightning Bolt - Funny Farm 🔉🔉🔉</a>
         </ul>       
        <br>
-       ★ Tenko's main tracks change often. It will almost certainly include a guitar and mayhaps be tinged with rock and or folk. Also see the tracks on <a href="/vim">Vim's</a> page, which are similar to Tenko's tastes. 
+       ★ Tenko's main tracks change often, though no Darigan's playlist can be without some guitar. Also see <a href="/vim">Vim's</a> page, which has tracks similar to Tenko's tastes. 
       </div>
   </div>
 
