--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="cushion">
 
     <div class="OCS">
-        <a href="/characters">
+        <a href="/neopets">
             <img src="images/index/neopets.png"></a>
             
     </div>
