the cooking update

--- a/neopets.html
+++ b/neopets.html
@@ -293,7 +293,7 @@
             ※ <img src="/images/other/faviconV2.png" class="favicon">: New! See the Neopets star next to a link? That
             means it'll take you to a page on Neopets.com (you likely need to be signed in)
             <br><br>
-            If you 404, come back soon, Tenkowski's working on something...!
+            If you 404, come back soon, Tenkowski's cooking...!
             <br>
             <a href="#"><button class="button button6">CLOSE THIS BOX</button></a>
         </p>
