--- a/neopets/caci.html
+++ b/neopets/caci.html
@@ -237,13 +237,11 @@
       href="https://impress.openneo.net/outfits/3089322">OPENNEO</a>
   </div>
   <div class="main">
-    <img src="/images/gifs/baby.gif" alt="Baby!" title="Baby!"><img src="/images/gifs/zomutt.gif" alt="Zomutt!"
-      title="Zomutt!"><img src="/images/gifs/buh.gif" alt="Buh!" title="Buh!"><img src="/images/gifs/lildevil.gif"
-      alt="Lil Devil!" title="Lil Devil!"><img src="/images/gifs/hic_armin.gif" alt="Tiny But Tough!"
+    <img src="/images/gifs/hissi.gif" alt="Hissi!" title="Hissi!"><img src="/images/gifs/baby.gif" alt="Baby!" title="Baby!"><img src="/images/gifs/zomutt.gif" alt="Zomutt!"
+      title="Zomutt!"><img src="/images/gifs/buh.gif" alt="Buh!" title="Buh!"><img src="/images/gifs/hic_armin.gif" alt="Tiny But Tough!"
       title="Tiny But Tough!"><img src="/images/gifs/cracked.gif" alt="Cracked!" title="Cracked!"><img
       src="/images/gifs/costume.gif" alt="Just A Costume..." title="Just A Costume..."><img
-      src="/images/gifs/burninate.gif" alt="Burninate!" title="Burninate!"><img src="/images/gifs/chomp.gif"
-      alt="Chomp!" title="Chomp!"><img src="/images/gifs/ava_udtcgfireuni.gif" alt="Fire Uni Starter Deck Enjoyer!"
+      src="/images/gifs/burninate.gif" alt="Burninate!" title="Burninate!"><img src="/images/gifs/ava_udtcgfireuni.gif" alt="Fire Uni Starter Deck Enjoyer!"
       title="Fire Uni Starter Deck Enjoyer!"><img src="/images/gifs/whee.gif" alt="Whee!" title="Whee!"><img
       src="/images/gifs/usuki.gif" alt="Usuki!" title="Usuki!">
   </div>
