moar stuff added to the neopets boxes

--- a/neopets.html
+++ b/neopets.html
@@ -254,7 +254,7 @@
     <div class="mainy">
         <a href="#what"><button class="button button5"> WHAT</button></a>
         <a href="#how"><button class="button button5"> HOW</button></a>
-        <a href="#nonneopet"><button class="button button5"> SHOW NON-NEOPETS</button></a>
+        <a href="#nonneopet"><button class="button button5"> MORE ANIMALS</button></a>
         <a href="#credits"><button class="button button5"> CREDITS</button></a>
         <p id="what">
             <span class="bigtext">THIS IS TENKO</span>
@@ -262,14 +262,14 @@
             <video controls width="350" height="200" muted>
                 <source src="/images/characters/tenko/tenkorave.webm" type="video/webm" />
             </video>
-            <br><br>and they cherish Neopets greatly
-            <br> Especially these Neopets
-            <br> Some they consider their family
-            <br> Others, they bully and get bullied by
-            <br> Each Neopet here has a bit of story behind it
-            <br> But it's nothing to think too much about
-            <br> For Neopets create something much more when put together
-
+            <br><br>who dearly cherishes Neopets
+            <br> especially these Neopets
+            <br> who considers them family
+            <br> or friends to bully
+            <br> each Neopet here has a bit of lore behind them
+            <br> but it's nothing to read too much into
+            <br> for Neopets create something much more
+            <br> when you see through them 'em all together
             <br>
             <a href="#"><button class="button button6">CLOSE THIS BOX</button></a>
         </p>
@@ -303,20 +303,53 @@
             <a href="/roninko"><img src="images/portraits/portrait_roninko.png"></a>
             <a href="/nekotenko"><img src="/images/portraits/portrait_nekotenko.png"></a>
             <br>
-            <a href="#"><button class="button button6">CLOSE THIS BOX</button></a>
+            <i>THE TIMELINES DIVERGE...</i><br>
+            》 Tenko is reborn as a heavily mutated mammal in a post-post apocalypic world left to fend for itself and is
+            called Roninko.
+            <br>
+            》 Tenko had they not isekai'd into Neopia in 2020, that's Neko Tenko.
+            <br>
+            <u>※ Roninko art by <a href="https://twitter.com/felitech_">Felitech</a> ※ Nekotenko art by <a
+                    href="https://twitter.com/muttvore">Muttvore</a></u>
+            <br>
+            <span class=bigtext>EXTRA NEOPETS</span>
+            <br>
+            <a href="/sirubiru"><img src="images/portraits/portrait_sirubiru.png" style="width:300px; height:150px;"><a
+                    href="/machu"><img src="images/portraits/portrait_machu.png"></a>
+                <br>
+                <i>VERY INACTIVE OR FORMER MEMBERS OF TENKO'S PARTY</i>
+                <br>
+                》 Veirs and Senja are still good friends with Tenko and sometimes still work with them, but the two are
+                often off doing their own research.
+                <br>
+                》Machu departed the party in 2024. <a href="sphoryx">Sphoryx</a> replaces them.
+                <br>
+                ※ It's not clear if the Neopets in this section will become active again, but don't expect the most up
+                to date art and info here.
+                <br>
+                <u>※ Veirsiru art by <a href="https://twitter.com/kappanuki">kappanuki</a> ※ Machu art by <a
+                        href="https://heartlurch.carrd.co/">heartlurch</a></u>
+                <br>
+                <a href="#"><button class="button button6">CLOSE THIS BOX</button></a>
         </p>
         <p id="credits">
             <span class="bigtext">ARTISTS AND ATTRIBUTION</span>
             <br>
-            ※Row 1 and 3: Art by <a href="https://twitter.com/ferwanwan">Ferwanwan</a> <br>
-            ※Row 2: Art by <a href="https://twitter.com/WEBPARTEEZ">Webparteez</a> <br>
-            ※Roninko art by <a href="https://twitter.com/felitech_">Felitech</a><br>
-            ※Nekotenko art by <a href="https://twitter.com/muttvore">Muttvore</a><br><br>
-            ※ All characters painted, zapped, mutated, reincarnated, transmogrified, divergent evolutioned, etc.by
-            Tenkowski.
-            <br><br> ※ SPECIAL THANKS: <a href="https://www.clairehummel.com/">Claire Hummel</a>, for her contributions
-            to Neopets art and design, including making the Darigan Bori!
+            》 Row 1 art by <a href="https://twitter.com/ferwanwan">Ferwanwan</a> <br>
+            》 Row 2 art by <a href="https://twitter.com/WEBPARTEEZ">Webparteez</a> <br>
+            》 Row 3 art by <a href="https://twitter.com/ferwanwan">Ferwanwan</a> <br>
 
+            》 All characters painted, zapped, mutated, reincarnated, transmogrified, divergent evolutioned, etc. by
+            Tenkowski.
+            <br>
+            <span class="bigtext">SPECIAL THANKS</span>
+            <br> 》Emi Matchu, developer of <a href="https://impress.openneo.net/">Dress To Impress</a> and the
+            volunteers who model new colors and wearables for the site.
+            <br> 》<a href="https://www.clairehummel.com/">Claire Hummel</a>, for her big contributions
+            to Neopets art and design, including making the Darigan Bori.
+            <br> 》<a href="https://www.furaffinity.net/user/metrohunter">Tuli</a>, bully and sometimes the better Bori.
+            <br> 》<a href="https://www.dominiquedeleon.com/fursuits">Dominique De Leon</a>, passionate creator of the
+            Tenko fursuit, extremely pleasant maker to work with.
             <br>
             <a href="#"><button class="button button6">CLOSE THIS BOX</button></a>
         </p>
