--- a/neopets/tenko.html
+++ b/neopets/tenko.html
@@ -344,7 +344,7 @@
     <ul id="playlist">
       <a href="/audio/tenko/talk.mp3">★ Phish - Talk</a>
         <br>
-        <a href="/audio/tenko/middleoftheroad.mp3">★ Leo Kottle - Middle Of The Road
+        <a href="/audio/tenko/middleoftheroad.mp3">★ Leo Kottke - Middle Of The Road
         </a>
         <br>
         <a href="/audio/tenko/funnyfarm.mp3">★ Lightning Bolt - Funny Farm 🔉🔉🔉</a>
