done for the day

--- a/neopets.html
+++ b/neopets.html
@@ -12,6 +12,7 @@
     <!-- emoji support-->
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet" />
     <!--zooms page on mobile devices-->
+    <meta name="viewport" content="width=device-width, initial-scale=0.7" />
 </head>
 <!--page colors and whatnot-->
 <style>
@@ -232,7 +233,7 @@
 
 
     <!--<div id="notice1">
-        ⚠️ September 2024: Character pages are slowly being updated or added! Pages that are the most up to date say NEOPETS instead of CHARACTERS on the top bar. Thanks for waitin. <span class="clickable" onclick="myFunction()">[close this message]</span> -->
+        ⚠️ Notices would go here if there's something new and important to say to the visitors. <span class="clickable" onclick="myFunction()">[close this message]</span> -->
     <div class="main">
         <div class="container">
             <a href="/tenko"><img src="/images/portraits/portrait_tenko.png"></a>
@@ -242,10 +243,8 @@
             <a href="/sosa"><img src="/images/portraits/portrait_sosa.png"></a>
             <a href="/qiru"><img src="images/portraits/portrait_qiru.png"></a>
             <a href="/lasak"><img src="images/portraits/portrait_lasaklang.png"></a>
-            <a href="roku"><img src="images/portraits/portrait_roku.png"></a>
-            <a href="sphoryx"><img src="images/portraits/portrait_sphoryx.png"></a>
-            <!--<a href="/sirubiru"><img src="images/portraits/portrait_sirubiru.png"style="width:300px; height:150px;">
-            <a href="https://www.neopets.com/userlookup.phtml?user=lol_99"><img src="images/portraits/portrait_andmore.png"></a>-->
+            <a href="/roku"><img src="images/portraits/portrait_roku.png"></a>
+            <a href="/sphoryx"><img src="images/portraits/portrait_sphoryx.png"></a>
 
         </div>
     </div>
@@ -304,7 +303,7 @@
             <a href="/nekotenko"><img src="/images/portraits/portrait_nekotenko.png"></a>
             <br>
             <i>THE TIMELINES DIVERGE...</i><br>
-            》 Tenko is reborn as a heavily mutated mammal in a post-post apocalypic world left to fend for itself and is
+            》 Tenko is reborn as a heavily mutated mammal left to fend for itself in a post-post apocalypic world and is
             called Roninko.
             <br>
             》 Tenko had they not isekai'd into Neopia in 2020, that's Neko Tenko.
@@ -329,6 +328,17 @@
                 <br>
                 <u>※ Veirsiru art by <a href="https://twitter.com/kappanuki">kappanuki</a> ※ Machu art by <a
                         href="https://heartlurch.carrd.co/">heartlurch</a></u>
+                <br>
+                <span class=bigtext>ONE MORE THING...</span>
+                <br>
+                <a href="https://www.neopets.com/userlookup.phtml?user=lol_99"><img
+                        src="images/portraits/portrait_andmore.png"></a>
+                        <br>
+                        <i>VIEW EVERYTHING?</i>
+                        <br>
+                        》Not everyone in Tenko's party is - or will - be here, but the portrait above will take you to see everyone on  <a href="https://www.neopets.com/userlookup.phtml?user=lol_99">lol_99's <img src="images/other/faviconV2.png"class="favicon"></a> userpage!
+
+
                 <br>
                 <a href="#"><button class="button button6">CLOSE THIS BOX</button></a>
         </p>
